# peneira

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
peneira/: cli.py  exporters.py
peneira/sources/: __init__.py  core.py  semantic_scholar.py
pn/: cli.py  exporters.py
pn/sources/: open_alex.py
tests/: test_exporters.py
tests/sources/: test_core.py  test_open_alex.py  test_semantic_scholar.py
tests/sources/fixtures/: core.json  semantic_paper_search_bulk.json  semantic_paper_search_bulk_no_token.json  works.json
